progs/tests/conflict_markers_multiple.sy
start :: fn {

<<<<<<< HEAD
    print extern_test(4.0)
=======
    print extern_test(5.0)
>>>>>>> 2

<<<<<<< HEAD
    print extern_test(4.0)
=======
    print extern_test(5.0)
>>>>>>> 2
}

// error: Error::GitConflictError { span: Span { line: 3 , .. }, .. }
// error: Error::GitConflictError { span: Span { line: 9 , .. }, .. }
